# lorenz-lab

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-pages.yml
api/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
api/src/: main.py  schemas.py
api/src/analysis/: __init__.py  analyzers.py
api/tests/: test_analyzers.py
frontend/: Dockerfile  nginx.conf  package.json  tsconfig.json
frontend/src/: index.html  main.ts
frontend/src/api/: AnalysisClient.ts
frontend/src/rendering/: AttractorSketch.ts  ResultPlotter.ts  SystemEquationRenderer.ts
frontend/src/systems/: ChuaSystem.ts  DynamicalSystem.ts  LorenzSystem.ts  RosslerSystem.ts  SystemFactory.ts
frontend/tests/: LorenzSystem.test.ts  rk4.test.ts
