[project]
name = "lorenz-lab-api"
version = "1.0.0"
description = "Analyse de trajectoires de systèmes dynamiques chaotiques."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
# Formatage compatible Black : guillemets doubles, fin de fichier avec newline,
# indentation 4 espaces. `ruff format` est un remplacement drop-in de Black,
# 30x plus rapide, déjà installé via ruff.
quote-style = "double"
indent-style = "space"
line-ending = "lf"
