[project]
name = "lorenz-lab-api"
version = "1.0.0"
description = "Analyse de trajectoires de systèmes dynamiques chaotiques."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F = pyflakes (bugs et erreurs évidentes), N = naming conventions,
# UP = upgrade (syntaxe moderne), B = bugbear (pièges), SIM = simplification.
# On retire I (isort) : la gestion d'ordre d'imports est laissée à `ruff format`
# qui le fait de façon cohérente avec le reste du formatage.
select = ["E", "F", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
# Formatage compatible Black : guillemets doubles, fin de fichier avec newline,
# indentation 4 espaces. `ruff format` est un remplacement drop-in de Black,
# 30x plus rapide, déjà installé via ruff.
quote-style = "double"
indent-style = "space"
line-ending = "lf"
